Fixed text alignment issue

--- a/styles.scss
+++ b/styles.scss
@@ -118,6 +118,9 @@ html {
         h3 {
             text-align: center;
         }
+        .btn-link {
+            text-align: left;
+        }
         .call-to-action {
             padding-top: 20px;
             text-align: center;
